force-app/main/default/objects/Score_History__c/Score_History__c.object-meta.xml
<CustomObject>
    <label>Score History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Score History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>