force-app/main/default/objects/Score_History__c/fields/New_Score__c.field-meta.xml
<CustomField>
    <fullName>New_Score__c</fullName>
    <label>New Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>