force-app/main/default/objects/Score_History__c/fields/Old_Score__c.field-meta.xml
<CustomField>
    <fullName>Old_Score__c</fullName>
    <label>Old Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>